# nomarr

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .importlinter  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IPC_ARCHITECTURE_ANALYSIS.md  LIBRARY_PATH_IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  REFACTORING_PLAN.md  REFACTORING_PLAN_WORKERS.md  SECURITY.md  WORKER_NORMALIZATION_PLAN.md  _tmp_spec.txt  architecture_manifest.py  architecture_overview.md  audit_docstrings.txt  compose.yaml  docker-compose-build-output-2.txt  docker-compose.yml  dockerfile  dockerfile.base  mkdocs.yml  mypy.ini  mypy_raw_output.txt  nomarr.code-workspace  nomarr.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  readme.md  requirements.txt  (+3 more)
.devcontainer/: .gitignore  devcontainer.json  docker-compose.dev.yaml  nomarr-arangodb.dev.env  nomarr.dev.env
.docker/: .env.local.example  README.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.obsidian/: workspace.json
.serena/: project.yml
artifacts/: .gitignore
code-intel/: README.md  config_schema.json  mcp_config.example.json  pyproject.toml
code-intel/docs/: mcp-spec-tools-2025-11-25.md  mcp-tools-reference.md
code-intel/instructions/: task-plans.md
code-intel/instructions/examples/: TASK-example-break-parser.md  TASK-example-comprehensive.md  TASK-example-edge-cases.md  TASK-example-multiline.md  TASK-example-nested-content.md
code-intel/schemas/: ADR_MARKDOWN_SCHEMA.json  PLAN_MARKDOWN_SCHEMA.json
code-intel/src/mcp_code_intel/: __init__.py  __main__.py  file_helpers.py  response_models.py  server.py
code-intel/src/mcp_code_intel/helpers/: adr_md.py  asr_md.py  config_loader.py  content_boundaries.py  dd_md.py  file_helpers.py  file_lines.py  log_md.py  log_suppressor.py  mcp_output_helper.py  plan_md.py  route_parser.py  semantic_tool_examples.py
code-intel/src/mcp_code_intel/schemas/: PLAN_MARKDOWN_SCHEMA.json
code-intel/src/mcp_code_intel/tests/: __init__.py  test_content_based_tools.py  test_content_boundaries.py  test_plan_parser_golden.py
code-intel/src/mcp_code_intel/tools/: __init__.py  adr_commit.py  adr_create.py  adr_read.py  adr_search.py  adr_suggest.py  analyze_project_api_coverage.py  asr_create.py  asr_read.py  asr_search.py  dd_archive.py  dd_create.py  dd_read.py  edit_file_copy_paste_text.py  edit_file_create.py  edit_file_insert_text.py  edit_file_move.py  edit_file_move_by_content.py  edit_file_move_text.py  edit_file_replace_by_content.py  edit_file_replace_content.py  edit_file_replace_line_range.py  edit_file_replace_string.py  lint_project_backend.py  lint_project_frontend.py  list_project_directory_tree.py  list_project_routes.py  locate_module_symbol.py  log_read.py  log_write.py  plan_archive.py  plan_complete_step.py  plan_read.py  py_introspect.py  read_file_line.py  read_file_range.py  read_file_symbol_at_line.py  read_module_api.py  read_module_source.py  search_file_text.py  (+2 more)
code-intel/src/mcp_code_intel/tools/deprecated/: list_project_routes.py
code-intel/tests/: test_adr_md.py  test_adr_tools.py  test_asr_md.py  test_asr_tools.py  test_content_boundaries.py  test_dd_md.py  test_dd_tools.py  test_edit_file_move.py  test_edit_file_move_by_content.py  test_edit_file_replace_by_content.py  test_edit_file_replace_string.py  test_file_create_new.py  test_file_helpers.py  test_file_insert_text.py  test_file_replace.py  test_lint_project.py  test_list_project_directory_tree.py  test_locate_module_symbol.py  test_log_md.py  test_log_tools.py  test_plan_archive.py  test_plan_md.py  test_plan_tools.py  test_py_introspect.py  test_read_file_line.py  test_read_file_range.py  test_read_file_symbol_at_line.py  test_read_module_api.py  test_read_module_source.py  test_search_file_text.py  test_tool_error_propagation.py  test_trace_module_calls.py  test_trace_project_endpoint.py
config/: config.yaml
context_pack/: COMPONENTS.md  COPILOT_MCP_TOOLS.md  HELPERS.md  INTERFACES.md  SERVICES.md  SUBAGENT_COMMAND_SCHEMAS.md  api_coverage.json  api_routes.json  components.instructions.md  dto_inventory.txt  frontend_structure.txt  helpers.instructions.md  persistence.instructions.md  pyproject.toml  services.instructions.md  workflows.instructions.md
docker/: cleanup-cron.sh  compose.override.yaml  compose.yaml  nom-cli.sh  nomarr-arangodb.env.example  nomarr.env
docs/: API_REFERENCE.md  CALIBRATION.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT_REPORT.md  DRY_OPPORTUNITIES.md  MODEL_WIRING_VALIDATION.md  NAMING_STANDARDS.md  NAVIDROME_DATA_FLOW.md  NAVIDROME_INTEGRATION.md  NAVIDROME_WEB_UI.md  NOM_ROADMAP.md  QC_SYSTEM.md  README.md  SLOP_DETECTION_RESULTS.md  TODO_DRY_REFACTOR.md  VERSIONING.md  getting_started.md  index.md  modelsinfo.md
e2e/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TEST_PLAN.md  library-integration.spec.ts  ml-tagging.spec.ts  no-gpu-fallback.spec.ts  package-lock.json  package.json  playwright.config.ts  smoke.spec.ts
frontend/: README.md  REFACTOR_PLAN.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
models/: README.md
python-mcp-devtools/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
python-mcp-devtools/docs/: TOOLS.md
python-mcp-devtools/examples/: README.md  django_svelte.json  fastapi_react.json  flask_vue.json
python-mcp-devtools/src/mcp_devtools/: __init__.py  edit_atomic_replace.py  edit_move_text.py  file_read_line.py  file_read_range.py  file_replace.py  file_search_text.py  file_symbol_at_line.py  lint_frontend.py  module_discover_api.py  module_get_source.py  plan_complete_step.py  plan_read.py  project_check_api_coverage.py  project_list_dir.py  project_list_routes.py  response_models.py  server.py  test_config_behavior.py  trace_calls.py  trace_endpoint.py
python-mcp-devtools/src/mcp_devtools/helpers/: __init__.py  log_suppressor.py  semantic_tool_examples.py
python-mcp-devtools/tests/: test_config_behavior.py
(+5183 files in other folders)
