[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomarr"
version = "0.1.4"
description = "AI-powered music organization and tagging system"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "xiaden"}
]
keywords = ["music", "tagging", "ai", "organization", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.0",
    "soundfile==0.13.1",
    "mutagen==1.47.0",
    "pyyaml==6.0.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "rich==13.7.1",
    "requests==2.32.3",
    "bcrypt==4.2.1",
    "python-arango==7.9.0",
    "watchdog==6.0.0",
    "psutil==7.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.14.13",
    "mypy==1.19.1",
    "bandit==1.9.3",
    "vulture==2.14",
    "pydub==0.25.1",
    "radon==5.1.0",
    "import-linter==2.6",
    "flake8==7.3.0",
    "flake8-cognitive-complexity==0.1.0",
    "flake8-simplify==0.30.0",
    "flake8-eradicate==1.5.0",
    "flake8-variables-names==0.0.6",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20260107",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xiaden/nomarr"
Repository = "https://github.com/xiaden/nomarr"
Issues = "https://github.com/xiaden/nomarr/issues"

[tool.setuptools.packages.find]
include = ["nomarr*"]
exclude = ["tests*", "scripts*", "frontend*", "models*", "docker*"]

[tool.pytest.ini_options]
# Point to config file in new location
addopts = "-c tool_configs/pytest.ini"

[tool.mypy]
# Point to config file in new location  
config_file = "tool_configs/mypy.ini"

[tool.ruff]
# Ruff configuration (mirrors tool_configs/ruff.toml if it exists)
line-length = 100
target-version = "py312"
