[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomarr"
version = "0.1.4"
description = "AI-powered music organization and tagging system"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "xiaden"}
]
keywords = ["music", "tagging", "ai", "organization", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.0",
    "soundfile==0.13.1",
    "mutagen==1.47.0",
    "pyyaml==6.0.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "rich==13.7.1",
    "requests==2.32.3",
    "bcrypt==4.2.1",
    "python-arango==7.9.0",
    "watchdog==6.0.0",
    "psutil==7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.14.13",
    "mypy==1.19.1",
    "bandit==1.9.3",
    "vulture==2.14",
    "pydub==0.25.1",
    "radon==5.1.0",
    "import-linter==2.6",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20260107",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xiaden/nomarr"
Repository = "https://github.com/xiaden/nomarr"
Issues = "https://github.com/xiaden/nomarr/issues"

[tool.setuptools.packages.find]
include = ["nomarr*"]
exclude = ["tests*", "scripts*", "frontend*", "models*", "docker*"]

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
console_output_style = "progress"
log_cli = false
log_cli_level = "ERROR"
markers = [
    "asyncio: Async tests using pytest-asyncio",
    "unit: Unit tests (minimal mocking, fast)",
    "integration: Integration tests (multiple components, real DB)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (model loading, heavy computation)",
    "requires_models: Tests that need model files",
    "requires_audio: Tests that need audio files",
    "requires_database: Tests that need Arango to function",
    "requires_essentia: Tests that need Essentia library",
    "requires_tensorflow: Tests that need TensorFlow",
    "container_only: Tests designed to run in Docker container (includes GPU tests, skip in CI)",
    "code_smell: Architecture/style tests that dont indicate broken functionality (skip in CI)",
    "mocked: Test uses mocked dependencies (informational)",
]

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "^tests/",
    "^scripts/",
]
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "essentia.*",
    "scipy.*",
    "mutagen.*",
    "soundfile.*",
    "pydub.*",
]
ignore_missing_imports = true

# === Ruff Configuration ===
[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
output-format = "json"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "TID",    # flake8-tidy-imports (for banned-api)
    "ERA",    # eradicate (commented-out code)
    "PERF",   # Perflint (performance anti-patterns)
    "ASYNC",  # flake8-async (async anti-patterns)
    "PIE",    # flake8-pie (misc code quality)
    "RET",    # flake8-return (return statement issues)
    "LOG",    # flake8-logging (logging best practices)
    "FURB",   # refurb (modernization)
    "TC",     # flake8-type-checking (TYPE_CHECKING imports)
    "ARG",    # flake8-unused-arguments
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends pattern)
    "N802",   # Function name should be lowercase (allow CamelCase for classes)
    "SIM108", # Use ternary operator instead of if-else-block (sometimes less readable)
    "ERA001", # Commented-out code detection (too many false positives)
    # TODO: Fix these incrementally, then remove from ignore
    "ARG001", # Unused function argument (26 existing violations)
    "ARG002", # Unused method argument (10 existing violations)
    "TC001",  # Move import into TYPE_CHECKING block
    "TC002",  # Move third-party import into TYPE_CHECKING block
    "TC003",  # Move stdlib import into TYPE_CHECKING block
]

[tool.ruff.lint.per-file-ignores]
"debug_vram.py" = ["E722"]
"nomarr/helpers/time_helper.py" = ["TID251"]
"nomarr/components/workers/worker_crash_comp.py" = ["TID251"]
# ML components use intentional lazy imports to avoid loading TF/numpy until needed
"nomarr/components/ml/*.py" = ["PLC0415"]
# DI wiring file uses lazy imports by design
"nomarr/app.py" = ["PLC0415"]
# FastAPI DI getters must import application lazily to avoid circular deps
"nomarr/interfaces/api/web/dependencies.py" = ["PLC0415"]
# Discovery workers run in separate processes - imports deferred until worker starts
"nomarr/services/infrastructure/workers/*.py" = ["PLC0415"]
# ML processing workflows defer imports to control TF/ML component loading order
"nomarr/workflows/processing/*.py" = ["PLC0415"]
# Calibration workflows are tightly coupled with ML layer
"nomarr/workflows/calibration/*.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["nomarr"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time.time".msg = "Use now_s() or now_ms() from nomarr.helpers.time_helper for wall-clock time"
"time.time_ns".msg = "Use now_s() or now_ms() from nomarr.helpers.time_helper for wall-clock time"
"time.monotonic".msg = "Use internal_s() or internal_ms() from nomarr.helpers.time_helper for monotonic time"
"time.monotonic_ns".msg = "Use internal_s() or internal_ms() from nomarr.helpers.time_helper for monotonic time"
"datetime.datetime.now".msg = "Use now_ms() from nomarr.helpers.time_helper, or format_wall_timestamp() for display"
"datetime.datetime.utcnow".msg = "Use now_ms() from nomarr.helpers.time_helper (utcnow is deprecated in Python 3.12)"
"builtins.print".msg = "Use logging (logger.info/debug/warning) instead of print() for proper log management"

# === Import Linter Configuration ===
[tool.importlinter]
root_packages = ["nomarr"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Services cannot import from interfaces"
type = "forbidden"
source_modules = ["nomarr.services"]
forbidden_modules = ["nomarr.interfaces"]

[[tool.importlinter.contracts]]
name = "Workflows cannot import from services or interfaces"
type = "forbidden"
source_modules = ["nomarr.workflows"]
forbidden_modules = ["nomarr.services", "nomarr.interfaces"]

[[tool.importlinter.contracts]]
name = "Persistence layer cannot import from workflows, services, interfaces, or components"
type = "forbidden"
source_modules = ["nomarr.persistence"]
forbidden_modules = ["nomarr.workflows", "nomarr.services", "nomarr.interfaces", "nomarr.components"]

[[tool.importlinter.contracts]]
name = "Components are isolated (no imports from workflows, services, or interfaces)"
type = "forbidden"
source_modules = ["nomarr.components"]
forbidden_modules = ["nomarr.services", "nomarr.interfaces", "nomarr.workflows"]

[[tool.importlinter.contracts]]
name = "Interfaces should be thin (only services + helpers)"
type = "forbidden"
source_modules = ["nomarr.interfaces"]
forbidden_modules = ["nomarr.workflows", "nomarr.persistence", "nomarr.components"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Helpers must be pure (no upward dependencies)"
type = "forbidden"
source_modules = ["nomarr.helpers"]
forbidden_modules = ["nomarr.services", "nomarr.workflows", "nomarr.interfaces", "nomarr.components", "nomarr.persistence"]

[[tool.importlinter.contracts]]
name = "Only components and services may import persistence"
type = "forbidden"
source_modules = ["nomarr.interfaces", "nomarr.workflows", "nomarr.helpers"]
forbidden_modules = ["nomarr.persistence"]
allow_indirect_imports = true
# Workflows may import Database under TYPE_CHECKING for type annotations only.
# import-linter cannot distinguish TYPE_CHECKING from runtime imports.
ignore_imports = [
    "nomarr.workflows.*.* -> nomarr.persistence.db",
]

[[tool.importlinter.contracts]]
name = "Services may only import Database for type hints"
type = "forbidden"
source_modules = ["nomarr.services"]
forbidden_modules = [
    "nomarr.persistence.database",
    "nomarr.persistence.arango_client",
]
allow_indirect_imports = true
# Note: import-linter cannot enforce TYPE_CHECKING-only imports.
# Services should only import Database from nomarr.persistence.db for type annotations.
# App.py (composition root) is the only place that should construct Database instances.

[[tool.importlinter.contracts]]
name = "CLI bootstrap service is only for CLI commands"
type = "layers"
layers = [
    "nomarr.interfaces.cli",
    "nomarr.services.infrastructure.cli_bootstrap_svc",
]
