[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mcp-devtools"
version = "0.1.0"
description = "MCP server with development tools for Python projects - route discovery, call tracing, linting, and more"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Nomarr Contributors"},
]
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "python", "code-analysis", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Tools",
]

dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "import-linter>=2.0",
]

[project.scripts]
mcp-devtools = "mcp_devtools.server:main"

[project.urls]
Repository = "https://github.com/nomarr-dev/python-mcp-devtools"

[tool.setuptools]
packages = ["mcp_devtools", "mcp_devtools.helpers", "mcp_devtools.schemas"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mcp_devtools = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
